# VDT-miniProject-Remote-Sensing-Imagery

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
core_backend/: CMakeLists.docker.txt  CMakeLists.txt  main.cpp
core_backend/common/: image_info.h  inference_data.h  thread_safe_queue.h  tile_data.h
core_backend/inference/: CMakeLists.txt  inference_engine.cpp  inference_engine.h
core_backend/pipeline/: CMakeLists.txt  large_geotiff_pipeline.cpp  large_geotiff_pipeline.h
core_backend/storage/: CMakeLists.txt  postgis_writer.cpp  postgis_writer.h
core_backend/tiling/: CMakeLists.txt  tile_engine.cpp  tile_engine.h
web/backend/: package-lock.json  package.json
web/backend/src/: app.controller.ts  app.service.ts  main.ts
web/frontend/: next.config.mjs  package-lock.json  package.json
web/frontend/app/: globals.css  layout.js  page.js
web/frontend/app/components/: MapView.js  Sidebar.js
